fix: visibility button invitation

--- a/src/assets/css/abstracts/color.css
+++ b/src/assets/css/abstracts/color.css
@@ -6,5 +6,6 @@
     --contrast-color: #44667f;
 
     --neutral-color: #f2e2f4;
+    --neutral-color-shadow: #fff
 
 }
