--- a/src/assets/css/components/backgroundImage.css
+++ b/src/assets/css/components/backgroundImage.css
@@ -17,7 +17,7 @@
     width: 100vw;
     height: 100vh;
 
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.7);
 
     z-index: 1;
 }
